--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/bec-sandwich.html">Bacon, Egg, and Cheese Sandwich</a>
+        <ul>
+            <li><a href="recipes/bec-sandwich.html">Bacon Egg and Cheese Sandwich</a></li>
+            <li><a href="recipes/croque-madame.html">Croque Madame</a></li>
+            <li><a href=""</li>
     </body>
 </html>
