--- a/recipes/bec-sandwich.html
+++ b/recipes/bec-sandwich.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Bacon, Egg, and Cheese Sandwich</h1>
-    <img src="recipes/bacon-egg-and-cheese-sandwich.jpg">
+    <img src="./images/bacon-egg-and-cheese-sandwich.jpg">
     <h3>Description</h3>
     <p>A bacon, egg, and cheese sandwich is a classic breakfast option featuring crispy bacon, a scrambled or fried egg, and melted cheese between slices of bread or a roll. It's a satisfying and savory morning treat.</p>
-    <h2>Ingredients</h2>
+    <h4>Ingredients</h4>
         <ul>
             <li>2 slices bacon</li>
             <li>4 teaspoons butter, divided</li>
@@ -20,7 +20,7 @@
             <li>1/4 cup shredded Cheddar cheese</li>
             <li>4 slices bread</li>
         </ul>
-    <h2>Steps</h2>
+    <h4>Steps</h4>
         <ol>
             <li>Place bacon in a nonstick skillet and cook over medium-high heat, turning occasionally, until evenly browned, about 7 minutes. Drain bacon slices on paper towels. Remove bacon to a drip line tray. Drain off bacon grease for another use. Wash out the skillet.</li>
             <li>Whisk eggs with salt and pepper in a small bowl until frothy.</li>
