--- a/recipes/bec-sandwich.html
+++ b/recipes/bec-sandwich.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Bacon, Egg, and Cheese Sandwich</h1>
-    <img src="./images/bacon-egg-and-cheese-sandwich.jpg">
+    <img src="./images/bacon-egg-and-cheese-sandwich.webp">
     <h3>Description</h3>
     <p>A bacon, egg, and cheese sandwich is a classic breakfast option featuring crispy bacon, a scrambled or fried egg, and melted cheese between slices of bread or a roll. It's a satisfying and savory morning treat.</p>
     <h4>Ingredients</h4>
