--- a/recipes/chicken-al-pastor.html
+++ b/recipes/chicken-al-pastor.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Chicken Al Pastor</h1>
-    <img src="./images/chicken-al-pastor.jpg">
+    <img src="./images/chicken-al-pastor.webp">
     <h3>Description</h3>
         <p>Chicken al pastor is a Mexican dish known for its marinated and grilled chicken, typically served in tacos with various toppings. The marinade gives the chicken a sweet and savory flavor.</p>
     <h4>Ingredients</h4>
