--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Croque Madame</h1>
-    <img src=".images/croque-madame.jpg">
+    <img src=".images/croque-madame.jpeg">
     <h3>Description</h3>
         <p>A Croque Madame is a French sandwich with ham, cheese, and a fried or poached egg on top. It's a delicious and indulgent choice for brunch or lunch.</p>
     <h4>Ingredients</h4>
