--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <ul>
             <li><a href="recipes/bec-sandwich.html">Bacon Egg and Cheese Sandwich</a></li>
             <li><a href="recipes/croque-madame.html">Croque Madame</a></li>
-            <li><a href=""</li>
+            <li><a href="recipes/chicken-al-pastor.html">Chicken Al Pastor</a></li>
     </body>
 </html>
